<resources>
	<string name="app_name">KUAS AP</string>
	<string name="update_note_title">Update Notes %s</string>
	<string name="update_note_content">更新：\n　104 學年度下學期行事曆\n　通知圖示\n\n優化：\n　開啟網頁速度\n　Loading效果\n　細節\n　部分特效\n\n修正：\n　行事曆崩潰之錯誤\n　部分用戶最新消息崩潰\n　部分翻譯錯誤\n\n新增\n　缺曠課之星期幾</string>
	<string name="splash_content">我們全都包了\n只剩下學校不包我們</string>
	<string name="share">Share</string>
	<string name="teacher_confirm_title">Are you a teacher?</string>
	<string name="teacher_confirm_content">This App only for students!</string>
	<string name="continue_to_use">Continue</string>
	<string name="logout">Logout</string>
	<string name="click_to_view">View</string>
	<string name="login_success">Login success,\nclick menu to view.</string>
	<string name="something_error">Error Occurred.</string>
	<string name="timeout_message">Try again later, Connection Timeout</string>
	<string name="login_first">Please login</string>
	<string name="logout_check">Are you sure you want to log out?</string>
	<string name="login">Login</string>
	<string name="dot_ap">AP</string>
	<string name="dot_leave">Leave</string>
	<string name="dot_bus">Bus</string>
	<string name="schedule">Events</string>
	<string name="loading">Loading&#8230;</string>
	<string name="id_hint">Student ID</string>
	<string name="password_hint">Password</string>
	<string name="remember_password">Remember</string>
	<string name="version">v.%s</string>
	<string name="login_ing">Logging&#8230;</string>
	<string name="call_phone_title">Call this number</string>
	<string name="call_phone_content">Are you sure to call \"%s\"?</string>
	<string name="call_phone">Call</string>
	<string name="determine">Yes</string>
	<string name="cancel">No</string>
	<string name="add_cal_content">Are you sure to add \"%s\" to your calendar?</string>
	<string name="click_to_retry">An error occurred, click to retry</string>
	<string name="bus_pick_date">Chosen Date: %s</string>
	<string name="bus_not_pick_date">Chosen Date</string>
	<string name="bus_count" formatted="false">(%s / %s)</string>
	<string name="bus_jiangong_reservations">To YanChao, Scheduled date：</string>
	<string name="bus_yanchao_reservations">To JianGong, Scheduled date：</string>
	<string name="bus_jiangong">To YanChao, Departure time：</string>
	<string name="bus_yanchao">To JianGong, Departure time：</string>
	<string name="bus_jiangong_reserved">√ To YanChao, Departure time：</string>
	<string name="bus_yanchao_reserved">√ To JianGong, Departure time：</string>
	<string name="back">Back</string>
	<string name="bus_reserve">Bus Reservation</string>
	<string name="bus_cancel_reserve">Cancel Bus Reservation</string>
	<string name="bus_reserve_confirm_title"><b>Reserve</b> this bus?</string>
	<string name="bus_reserve_confirm_content" formatted="false">Are you sure to reserve a seat from %s at %s ?</string>
	<string name="bus_cancel_reserve_confirm_title"><b>Cancel</b> this reservation?</string>
	<string name="bus_cancel_reserve_confirm_content" formatted="false">Are you sure to cancel a seat from %s at %s ?</string>
	<string name="bus_from_jiangong">JianGong to YanChao</string>
	<string name="bus_from_yanchao">YanChao to JianGong</string>
	<string name="bus_reserve_success">Successfully Reserved!</string>
	<string name="bus_cancel_reserve_success">Successfully Canceled!</string>
	<string name="bus_no_reservation">Oops! You haven\'t reserved any bus~\n Ride public transport to save the Earth %s</string>
	<string name="bus_no_bus">Oops! No bus today~\n Please choose another date %s</string>
	<string name="course_no_course">Oops! No class for this semester~\n Please choose another semester %s</string>
	<string name="ok">OK</string>
	<string name="course_dialog_messages" formatted="false">Class：%s\nProfessor：%s\nLocation：%s\nTime：%s</string>
	<string name="course_dialog_title">Class Info</string>
	<string name="course_holiday">Rotate Screen to see weekend schedule %s</string>
	<string name="no_internet">No internet connection</string>
	<string name="setting_internet">Internet Settings</string>
	<string name="score_no_score">Oops! No record for this semester~\nPlease choose another semester %s</string>
	<string name="leave_night">Rotate screen to see night school absent record and day of week %s</string>
	<string name="leave_no_leave">Oops! No absent record for this semester~\nPlease choose another semester %s</string>
	<string name="token_expired_title">Re-login Required</string>
	<string name="token_expired_content">Cookie has expired, please re-login!</string>
	<string name="update_content">Update available for KUAS AP!</string>
	<string name="update_title">Updated</string>
	<string name="update">Update</string>
	<string name="function_not_open">Coming Soon~\nDonate to use this feature now!</string>
	<string name="beta_function">This is a beta version, please report a bug if an error
		occurred!</string>
	<string name="bus_not_pick">You have not chosen a date!\n Please choose a date first %s</string>
	<string name="easter_egg_juke">This is not an easter egg</string>
	<string name="skip">Skip</string>
	<string name="share_to">Share to…</string>
	<string name="send_from">Sent from KUAS AP Android</string>
	<string name="donate_title">Donate</string>
	<string name="donate_content">Help and support the programmer\nto use new features!</string>
	<string name="donate_error">Oops!Something went wrong :(\nGO to Google Play\n search for KUAS AP
		Donate \n to support the author!</string>
	<string name="bus_notify_hint">Reminder will pop up 30 mins before reserved bus !\nIf you
		reserved or canceled the seat via website, please restart the app.</string>
	<string name="bus_notify_content" formatted="false">You\'ve got a bus departing at %s from %s!</string>
	<string name="bus_notify_jiangong">JianGong</string>
	<string name="bus_notify_yanchao">YanChao</string>
	<string name="course_vibrate_hint">Will turn on silent mode during class, turn back to normal mode after class!</string>
	<string name="course_notify_hint">Reminder will pop up 10mins before class starts!</string>
	<string name="course_notify_content" formatted="false">Class %s will be at room %s!</string>
	<string name="course_notify_unknown">Outerspace~</string>
	<string name="education_system">Scheme</string>
	<string name="department">Department</string>
	<string name="student_class">Class</string>
	<string name="student_id">Student ID</string>
	<string name="student_name_cht">Name</string>
	<string name="notification_item">Notification</string>
	<string name="other_info">Other</string>
	<string name="other_settings">Settings</string>
	<string name="head_photo_setting">Show Photo</string>
	<string name="course_notify">Class Reminder</string>
	<string name="course_vibrate">Silent Mode During Class</string>
	<string name="bus_notify">Bus Reservation Reminder</string>
	<string name="feedback">Suggestions</string>
	<string name="feedback_via_facebook">Message to Facebook Page</string>
	<string name="app_version">App Version</string>
	<string name="about_detail">The best KUAS Campus App\nKUAS AP\n\nAre you a
		freshman?\nDon\'t know about school info, telephone numbers, or up coming events?\nBeen
		here a few years?\nHave checking class schedule, report card and reserving bus seats
		drove you crazy?\n\nNo more, no more worries, anymore!\n\nKUAS AP lets no matter old or new
		fellow\nhave control over your life in KUAS!\n\nFrom checking class schedule, report card to
		your absence records!\nPlus reserving/canceling bus seats with newest school feeds!\n\n\n\nMuch Simple, Many Convenient, Very instinct, wow!\n\n☆FABULOUS☆</string>
	<string name="about_author_title">Made by</string>
	<string name="about_author_content">呂紹榕(Louie Lu), 姜尚德(JohnThunder), \nregisterAutumn, 詹濬鍵(Evans), \n陳建霖(HearSilent)</string>
	<string name="about_us">“Ask not why nobody is doing this. You are \'nobody\'.”\n\nWe did this
		cause no one did it.\nWe created KUAS Wifi Login, KUAS
		AP and KUAS Gourmet, Course Selection Sim, etc&#8230;\nTo bring convenience to
		everyone\'s on campus!</string>
	<string name="about_recruit_title">We Need You !</string>
	<string name="about_recruit_content">If you\'re experienced in Objective-C, Swift, Java or
		you\'re interested in Coding!
		\n\nMessage us at our Facebook fanpage!\nYour code might one day be operating in
		everyone\'s hands~</string>
	<string name="about_itc_content">In year 2014,\nwe founded KUAS Information Technology
		Club!\n\nIf you\'re enthusiastic or drawn to our projects, join our classes and talks or
		come by to chat!</string>
	<string name="about_itc_title">KUAS IT Club</string>
	<string name="about_contact_us">Contact Us</string>
	<string name="about_open_source_title">Open Source License</string>
	<string
		name="about_open_source_content">https://github.com/hearsilent/KUAS-AP-Material\n\nThis project is licensed under the terms of the MIT license:\nThe MIT License (MIT)\n\nCopyright &#169; 2015 HearSilent\n\nPermission is
		hereby granted, free of charge, to any person obtaining a copy of this software and
		associated documentation files (the "Software"), to deal in the Software without
		restriction, including without limitation the rights to use, copy, modify, merge,
		publish, distribute, sublicense, and/or sell copies of the Software, and to permit
		persons to whom the Software is furnished to do so, subject to the following
		conditions:\n\nThe above copyright notice and this permission notice shall be included in
		all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS",
		WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
		WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN
		NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
		LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR
		IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
	<string name="open_drawer">Open Menu</string>
	<string name="close_drawer">Close Menu</string>
	<string name="news">News</string>
	<string name="offline_course">Offline Class Schedule</string>
	<string name="course">Class Schedule</string>
	<string name="score">Report Card</string>
	<string name="leave">Absent System</string>
	<string name="bus">Bus Reservation</string>
	<string name="simcourse">Course Selection Sim</string>
	<string name="messages">School Info</string>
	<string name="user">Personal Info</string>
	<string name="about">About Us</string>
	<string name="settings">Settings</string>
	<string name="guest">Guest</string>
	<string name="tap_here_to_login">Tap to Login</string>
	<string name="pick_semester">Choose Semester</string>
	<string name="enter_username_hint">Please enter your ID</string>
	<string name="enter_password_hint">Please enter your password</string>
	<string name="check_login_hint">Check your username and password then retry</string>
	<string name="bus_segment">From JianGong|From YanChao</string>
	<string name="lorem_title">Lorem ipsum</string>
	<string name="lorem_sentence">Lorem ipsum dolor sit amet.</string>
	<string name="lorem_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
	<string name="lorem_number">123</string>
	<string name="lorem_date">2015&#8211;09&#8211;06</string>
	<string name="lorem_time">09:20</string>
	<string name="lorem_bus_count">(1 / 999)</string>
	<string name="lorem_phone">(01) 234&#8211;5678</string>
	<string name="lorem_semester">104學年度第1學期</string>
	<string name="mon">Mon.</string>
	<string name="tue">Tue.</string>
	<string name="wed">Wed.</string>
	<string name="thu">Thu.</string>
	<string name="fri">Fri.</string>
	<string name="sat">Sat.</string>
	<string name="sun">Sun.</string>
</resources>