<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	android:id="@+id/drawer_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/app_bg"
	android:fitsSystemWindows="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/app_bg"
		android:orientation="vertical">

		<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:layout_gravity="top"
				android:background="?attr/colorPrimary"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
				app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
		</android.support.design.widget.AppBarLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="?android:windowContentOverlay"
			android:gravity="center"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textView_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="0"
				android:paddingTop="@dimen/margin_medium"
				android:textColor="@color/main_theme"
				android:textSize="@dimen/text_title"
				android:textStyle="bold"
				tools:text="@string/app_name"/>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginBottom="@dimen/margin_small"
				android:layout_marginTop="@dimen/margin_small"
				android:layout_weight="1">

				<WebView
					android:id="@+id/webView"
					android:layout_width="match_parent"
					android:layout_height="match_parent"/>

				<silent.kuasapmaterial.libs.MaterialProgressBar
					android:id="@+id/materialProgressBar"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					app:enable_circle_background="false"/>
			</RelativeLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_small"
				android:layout_weight="0"
				android:gravity="center"
				android:paddingBottom="@dimen/margin_medium">

				<Button
					android:id="@+id/button_openUrl"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="@dimen/margin_medium"
					android:background="@drawable/button_login"
					android:minWidth="100dp"
					android:text="@string/click_to_view"
					android:textAllCaps="false"
					android:textColor="@color/white_text"
					android:textSize="@dimen/text_subhead"/>

				<Button
					android:id="@+id/button_logout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/button_logout"
					android:minWidth="100dp"
					android:text="@string/logout"
					android:textAllCaps="false"
					android:textColor="@color/white_text"
					android:textSize="@dimen/text_subhead"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

	<android.support.design.widget.NavigationView
		android:id="@+id/nav_view"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:background="#ffffffff"
		android:fitsSystemWindows="true"
		app:headerLayout="@layout/drawer_header"
		app:menu="@menu/drawer_menu"/>
</android.support.v4.widget.DrawerLayout>