<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	android:id="@+id/drawer_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:wheel="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/app_bg"
	android:fitsSystemWindows="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/app_bg"
		android:gravity="center_horizontal"
		android:orientation="vertical">

		<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:layout_gravity="top"
				android:background="?attr/colorPrimary"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
				app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
		</android.support.design.widget.AppBarLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="?android:windowContentOverlay"
			android:gravity="center"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/view_pickYms"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_small"
				android:background="?selectableItemBackground"
				android:gravity="center"
				android:padding="@dimen/margin_small">

				<TextView
					android:id="@+id/textView_pickYms"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/lorem_semester"
					android:textColor="@color/accent"
					android:textSize="@dimen/text_subhead"/>

				<ImageView
					android:id="@+id/imageView_pickYms"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/margin_small"
					android:contentDescription="@null"
					tools:src="@drawable/ic_keyboard_arrow_down_white_24dp"/>
			</LinearLayout>

			<TextView
				android:id="@+id/textView_holiday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/course_holiday"
				android:textColor="@color/black_text_secondary"
				android:textSize="@dimen/text_action"
				android:visibility="gone"/>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<android.support.v4.widget.SwipeRefreshLayout
					android:id="@+id/swipeRefreshLayout"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginBottom="@dimen/margin_medium"
					android:layout_marginLeft="@dimen/margin_medium"
					android:layout_marginRight="@dimen/margin_medium"
					android:layout_marginTop="@dimen/margin_small">

					<ScrollView
						android:id="@+id/scrollView"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:fillViewport="true"/>
				</android.support.v4.widget.SwipeRefreshLayout>

				<LinearLayout
					android:id="@+id/linearLayout_no_course"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="?selectableItemBackground"
					android:gravity="center"
					android:orientation="vertical"
					android:visibility="gone">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:contentDescription="@null"
						android:src="@drawable/ic_class_grey600"/>

					<TextView
						android:id="@+id/textView_no_course"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/margin_medium"
						android:gravity="center"
						android:lineSpacingMultiplier="1.3"
						android:textColor="@color/black_text_secondary"
						android:textSize="@dimen/text_subhead"
						tools:text="@string/course_no_course"/>
				</LinearLayout>

				<silent.kuasapmaterial.libs.ProgressWheel
					android:id="@+id/progress_wheel"
					android:layout_width="42sp"
					android:layout_height="42sp"
					android:layout_centerInParent="true"
					wheel:matProg_barColor="@color/progress_red"
					wheel:matProg_circleBackground="false"
					wheel:matProg_fillRadius="true"
					wheel:matProg_material="true"
					wheel:matProg_progressIndeterminate="true"
					wheel:matProg_shadowSize="3"/>
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>

	<android.support.design.widget.NavigationView
		android:id="@+id/nav_view"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:background="#ffffffff"
		android:fitsSystemWindows="true"
		app:headerLayout="@layout/drawer_header"
		app:menu="@menu/drawer_menu"/>
</android.support.v4.widget.DrawerLayout>